force-app/main/default/objects/Case/fields/Correo_de_usuario__c.field-meta.xml
<CustomField>
    <fullName>Correo_de_usuario__c</fullName>
    <label>Correo de usuario</label>
    <type>Email</type>
</CustomField>