force-app/main/default/objects/Case/fields/Nombre_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Cliente__c</fullName>
    <label>Nombre de Cliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>