force-app/main/default/objects/Case/recordTypes/Proceso_Interno.recordType-meta.xml
<RecordType>
    <fullName>Proceso_Interno</fullName>
    <active>true</active>
    <businessProcess>Soporte interno</businessProcess>
    <label>Proceso Interno</label>
</RecordType>