force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Cases</label>
</ListView>